Project 2/parser.output
Grammar

    0 $accept: Program $end

    1 Program: DeclAdd

    2 DeclAdd: DeclAdd Decl
    3        | Decl

    4 Decl: VariableDecl
    5     | FunctionDecl

    6 VariableDecl: Variable SEMICOLON

    7 Variable: Type ID

    8 Type: INT
    9     | BOOL
   10     | STRING
   11     | CHAR

   12 FunctionDecl: Type ID LPAREN OptFormals RPAREN StmtBlock
   13             | VOID ID LPAREN OptFormals RPAREN StmtBlock

   14 OptFormals: Formals
   15           | /* empty */

   16 Formals: Variable
   17        | Formals COMMA Variable

   18 StmtBlock: LBRACE VarDeclAdd StmtAdd RBRACE
   19          | LBRACE StmtAdd RBRACE
   20          | LBRACE VarDeclAdd RBRACE
   21          | LBRACE RBRACE

   22 VarDeclAdd: VarDeclAdd VariableDecl
   23           | VariableDecl

   24 StmtAdd: StmtAdd Stmt
   25        | Stmt

   26 Stmt: SEMICOLON
   27     | Expr SEMICOLON
   28     | IfStmt
   29     | WhileStmt
   30     | ForStmt
   31     | ReturnStmt
   32     | PrintStmt
   33     | StmtBlock

   34 IfStmt: IF LPAREN Expr RPAREN Stmt ELSE Stmt
   35       | IF LPAREN Expr RPAREN Stmt

   36 WhileStmt: WHILE LPAREN Expr RPAREN Stmt

   37 ForStmt: FOR LPAREN Expr SEMICOLON SEMICOLON RPAREN Stmt
   38        | FOR LPAREN SEMICOLON Expr SEMICOLON RPAREN Stmt
   39        | FOR LPAREN SEMICOLON SEMICOLON Expr RPAREN Stmt
   40        | FOR LPAREN SEMICOLON SEMICOLON RPAREN Stmt
   41        | FOR LPAREN Expr SEMICOLON Expr SEMICOLON RPAREN Stmt
   42        | FOR LPAREN Expr SEMICOLON SEMICOLON Expr RPAREN Stmt
   43        | FOR LPAREN SEMICOLON Expr SEMICOLON Expr RPAREN Stmt
   44        | FOR LPAREN Expr SEMICOLON Expr SEMICOLON Expr RPAREN Stmt

   45 ReturnStmt: RETURN SEMICOLON
   46           | RETURN Expr SEMICOLON

   47 PrintStmt: PRINTF LPAREN STRINGCONSTANT COMMA ExprAdd RPAREN SEMICOLON
   48          | PRINTF LPAREN Constant RPAREN SEMICOLON
   49          | PRINTF LPAREN ID RPAREN SEMICOLON

   50 ExprAdd: ExprAdd COMMA Expr
   51        | Expr

   52 Expr: ID EQUAL Expr
   53     | Constant
   54     | ID
   55     | Call
   56     | LPAREN Expr RPAREN
   57     | Expr PLUS Expr
   58     | Expr MINUS Expr
   59     | Expr MULT Expr
   60     | Expr DIV Expr
   61     | MINUS Expr
   62     | Expr LESSTHAN Expr
   63     | Expr LESSTHANOREQL Expr
   64     | Expr GRTRTHAN Expr
   65     | Expr GRTRTHANOREQL Expr
   66     | Expr EQUIVALENT Expr
   67     | Expr NOTEQUIVALENT Expr
   68     | Expr MOD Expr

   69 Call: ID LPAREN OptExprAdd RPAREN

   70 OptExprAdd: ExprAdd
   71           | /* empty */

   72 Constant: INTCONSTANT
   73         | STRINGCONSTANT
   74         | BOOLCONSTANT
   75         | CHARCONSTANT


Terminals, with rules where they appear

$end (0) 0
error (256)
BOOL (258) 9
CHAR (259) 11
CHARCONSTANT (260) 75
ELSE (261) 34
FOR (262) 37 38 39 40 41 42 43 44
IF (263) 34 35
INT (264) 8
PRINTF (265) 47 48 49
RETURN (266) 45 46
STRING (267) 10
VOID (268) 13
WHILE (269) 36
PLUS (270) 57
MINUS (271) 58 61
MULT (272) 59
DIV (273) 60
MOD (274) 68
LESSTHAN (275) 62
LESSTHANOREQL (276) 63
GRTRTHAN (277) 64
GRTRTHANOREQL (278) 65
EQUIVALENT (279) 66
NOTEQUIVALENT (280) 67
EQUAL (281) 52
SEMICOLON (282) 6 26 27 37 38 39 40 41 42 43 44 45 46 47 48 49
COMMA (283) 17 47 50
LPAREN (284) 12 13 34 35 36 37 38 39 40 41 42 43 44 47 48 49 56 69
RPAREN (285) 12 13 34 35 36 37 38 39 40 41 42 43 44 47 48 49 56 69
LBRACE (286) 18 19 20 21
RBRACE (287) 18 19 20 21
STRINGCONSTANT (288) 47 73
INTCONSTANT (289) 72
BOOLCONSTANT (290) 74
ID (291) 7 12 13 49 52 54 69
NOELSE (292)


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
Program (39)
    on left: 1, on right: 0
DeclAdd (40)
    on left: 2 3, on right: 1 2
Decl (41)
    on left: 4 5, on right: 2 3
VariableDecl (42)
    on left: 6, on right: 4 22 23
Variable (43)
    on left: 7, on right: 6 16 17
Type (44)
    on left: 8 9 10 11, on right: 7 12
FunctionDecl (45)
    on left: 12 13, on right: 5
OptFormals (46)
    on left: 14 15, on right: 12 13
Formals (47)
    on left: 16 17, on right: 14 17
StmtBlock (48)
    on left: 18 19 20 21, on right: 12 13 33
VarDeclAdd (49)
    on left: 22 23, on right: 18 20 22
StmtAdd (50)
    on left: 24 25, on right: 18 19 24
Stmt (51)
    on left: 26 27 28 29 30 31 32 33, on right: 24 25 34 35 36 37 38
    39 40 41 42 43 44
IfStmt (52)
    on left: 34 35, on right: 28
WhileStmt (53)
    on left: 36, on right: 29
ForStmt (54)
    on left: 37 38 39 40 41 42 43 44, on right: 30
ReturnStmt (55)
    on left: 45 46, on right: 31
PrintStmt (56)
    on left: 47 48 49, on right: 32
ExprAdd (57)
    on left: 50 51, on right: 47 50 70
Expr (58)
    on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68,
    on right: 27 34 35 36 37 38 39 41 42 43 44 46 50 51 52 56 57 58
    59 60 61 62 63 64 65 66 67 68
Call (59)
    on left: 69, on right: 55
OptExprAdd (60)
    on left: 70 71, on right: 69
Constant (61)
    on left: 72 73 74 75, on right: 48 53


state 0

    0 $accept: . Program $end

    BOOL    shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    STRING  shift, and go to state 4
    VOID    shift, and go to state 5

    Program       go to state 6
    DeclAdd       go to state 7
    Decl          go to state 8
    VariableDecl  go to state 9
    Variable      go to state 10
    Type          go to state 11
    FunctionDecl  go to state 12


state 1

    9 Type: BOOL .

    $default  reduce using rule 9 (Type)


state 2

   11 Type: CHAR .

    $default  reduce using rule 11 (Type)


state 3

    8 Type: INT .

    $default  reduce using rule 8 (Type)


state 4

   10 Type: STRING .

    $default  reduce using rule 10 (Type)


state 5

   13 FunctionDecl: VOID . ID LPAREN OptFormals RPAREN StmtBlock

    ID  shift, and go to state 13


state 6

    0 $accept: Program . $end

    $end  shift, and go to state 14


state 7

    1 Program: DeclAdd .
    2 DeclAdd: DeclAdd . Decl

    BOOL    shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    STRING  shift, and go to state 4
    VOID    shift, and go to state 5

    $default  reduce using rule 1 (Program)

    Decl          go to state 15
    VariableDecl  go to state 9
    Variable      go to state 10
    Type          go to state 11
    FunctionDecl  go to state 12


state 8

    3 DeclAdd: Decl .

    $default  reduce using rule 3 (DeclAdd)


state 9

    4 Decl: VariableDecl .

    $default  reduce using rule 4 (Decl)


state 10

    6 VariableDecl: Variable . SEMICOLON

    SEMICOLON  shift, and go to state 16


state 11

    7 Variable: Type . ID
   12 FunctionDecl: Type . ID LPAREN OptFormals RPAREN StmtBlock

    ID  shift, and go to state 17


state 12

    5 Decl: FunctionDecl .

    $default  reduce using rule 5 (Decl)


state 13

   13 FunctionDecl: VOID ID . LPAREN OptFormals RPAREN StmtBlock

    LPAREN  shift, and go to state 18


state 14

    0 $accept: Program $end .

    $default  accept


state 15

    2 DeclAdd: DeclAdd Decl .

    $default  reduce using rule 2 (DeclAdd)


state 16

    6 VariableDecl: Variable SEMICOLON .

    $default  reduce using rule 6 (VariableDecl)


state 17

    7 Variable: Type ID .
   12 FunctionDecl: Type ID . LPAREN OptFormals RPAREN StmtBlock

    LPAREN  shift, and go to state 19

    $default  reduce using rule 7 (Variable)


state 18

   13 FunctionDecl: VOID ID LPAREN . OptFormals RPAREN StmtBlock

    BOOL    shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    STRING  shift, and go to state 4

    $default  reduce using rule 15 (OptFormals)

    Variable    go to state 20
    Type        go to state 21
    OptFormals  go to state 22
    Formals     go to state 23


state 19

   12 FunctionDecl: Type ID LPAREN . OptFormals RPAREN StmtBlock

    BOOL    shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    STRING  shift, and go to state 4

    $default  reduce using rule 15 (OptFormals)

    Variable    go to state 20
    Type        go to state 21
    OptFormals  go to state 24
    Formals     go to state 23


state 20

   16 Formals: Variable .

    $default  reduce using rule 16 (Formals)


state 21

    7 Variable: Type . ID

    ID  shift, and go to state 25


state 22

   13 FunctionDecl: VOID ID LPAREN OptFormals . RPAREN StmtBlock

    RPAREN  shift, and go to state 26


state 23

   14 OptFormals: Formals .
   17 Formals: Formals . COMMA Variable

    COMMA  shift, and go to state 27

    $default  reduce using rule 14 (OptFormals)


state 24

   12 FunctionDecl: Type ID LPAREN OptFormals . RPAREN StmtBlock

    RPAREN  shift, and go to state 28


state 25

    7 Variable: Type ID .

    $default  reduce using rule 7 (Variable)


state 26

   13 FunctionDecl: VOID ID LPAREN OptFormals RPAREN . StmtBlock

    LBRACE  shift, and go to state 29

    StmtBlock  go to state 30


state 27

   17 Formals: Formals COMMA . Variable

    BOOL    shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    STRING  shift, and go to state 4

    Variable  go to state 31
    Type      go to state 21


state 28

   12 FunctionDecl: Type ID LPAREN OptFormals RPAREN . StmtBlock

    LBRACE  shift, and go to state 29

    StmtBlock  go to state 32


state 29

   18 StmtBlock: LBRACE . VarDeclAdd StmtAdd RBRACE
   19          | LBRACE . StmtAdd RBRACE
   20          | LBRACE . VarDeclAdd RBRACE
   21          | LBRACE . RBRACE

    BOOL            shift, and go to state 1
    CHAR            shift, and go to state 2
    CHARCONSTANT    shift, and go to state 33
    FOR             shift, and go to state 34
    IF              shift, and go to state 35
    INT             shift, and go to state 3
    PRINTF          shift, and go to state 36
    RETURN          shift, and go to state 37
    STRING          shift, and go to state 4
    WHILE           shift, and go to state 38
    MINUS           shift, and go to state 39
    SEMICOLON       shift, and go to state 40
    LPAREN          shift, and go to state 41
    LBRACE          shift, and go to state 29
    RBRACE          shift, and go to state 42
    STRINGCONSTANT  shift, and go to state 43
    INTCONSTANT     shift, and go to state 44
    BOOLCONSTANT    shift, and go to state 45
    ID              shift, and go to state 46

    VariableDecl  go to state 47
    Variable      go to state 10
    Type          go to state 21
    StmtBlock     go to state 48
    VarDeclAdd    go to state 49
    StmtAdd       go to state 50
    Stmt          go to state 51
    IfStmt        go to state 52
    WhileStmt     go to state 53
    ForStmt       go to state 54
    ReturnStmt    go to state 55
    PrintStmt     go to state 56
    Expr          go to state 57
    Call          go to state 58
    Constant      go to state 59


state 30

   13 FunctionDecl: VOID ID LPAREN OptFormals RPAREN StmtBlock .

    $default  reduce using rule 13 (FunctionDecl)


state 31

   17 Formals: Formals COMMA Variable .

    $default  reduce using rule 17 (Formals)


state 32

   12 FunctionDecl: Type ID LPAREN OptFormals RPAREN StmtBlock .

    $default  reduce using rule 12 (FunctionDecl)


state 33

   75 Constant: CHARCONSTANT .

    $default  reduce using rule 75 (Constant)


state 34

   37 ForStmt: FOR . LPAREN Expr SEMICOLON SEMICOLON RPAREN Stmt
   38        | FOR . LPAREN SEMICOLON Expr SEMICOLON RPAREN Stmt
   39        | FOR . LPAREN SEMICOLON SEMICOLON Expr RPAREN Stmt
   40        | FOR . LPAREN SEMICOLON SEMICOLON RPAREN Stmt
   41        | FOR . LPAREN Expr SEMICOLON Expr SEMICOLON RPAREN Stmt
   42        | FOR . LPAREN Expr SEMICOLON SEMICOLON Expr RPAREN Stmt
   43        | FOR . LPAREN SEMICOLON Expr SEMICOLON Expr RPAREN Stmt
   44        | FOR . LPAREN Expr SEMICOLON Expr SEMICOLON Expr RPAREN Stmt

    LPAREN  shift, and go to state 60


state 35

   34 IfStmt: IF . LPAREN Expr RPAREN Stmt ELSE Stmt
   35       | IF . LPAREN Expr RPAREN Stmt

    LPAREN  shift, and go to state 61


state 36

   47 PrintStmt: PRINTF . LPAREN STRINGCONSTANT COMMA ExprAdd RPAREN SEMICOLON
   48          | PRINTF . LPAREN Constant RPAREN SEMICOLON
   49          | PRINTF . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 62


state 37

   45 ReturnStmt: RETURN . SEMICOLON
   46           | RETURN . Expr SEMICOLON

    CHARCONSTANT    shift, and go to state 33
    MINUS           shift, and go to state 39
    SEMICOLON       shift, and go to state 63
    LPAREN          shift, and go to state 41
    STRINGCONSTANT  shift, and go to state 43
    INTCONSTANT     shift, and go to state 44
    BOOLCONSTANT    shift, and go to state 45
    ID              shift, and go to state 46

    Expr      go to state 64
    Call      go to state 58
    Constant  go to state 59


state 38

   36 WhileStmt: WHILE . LPAREN Expr RPAREN Stmt

    LPAREN  shift, and go to state 65


state 39

   61 Expr: MINUS . Expr

    CHARCONSTANT    shift, and go to state 33
    MINUS           shift, and go to state 39
    LPAREN          shift, and go to state 41
    STRINGCONSTANT  shift, and go to state 43
    INTCONSTANT     shift, and go to state 44
    BOOLCONSTANT    shift, and go to state 45
    ID              shift, and go to state 46

    Expr      go to state 66
    Call      go to state 58
    Constant  go to state 59


state 40

   26 Stmt: SEMICOLON .

    $default  reduce using rule 26 (Stmt)


state 41

   56 Expr: LPAREN . Expr RPAREN

    CHARCONSTANT    shift, and go to state 33
    MINUS           shift, and go to state 39
    LPAREN          shift, and go to state 41
    STRINGCONSTANT  shift, and go to state 43
    INTCONSTANT     shift, and go to state 44
    BOOLCONSTANT    shift, and go to state 45
    ID              shift, and go to state 46

    Expr      go to state 67
    Call      go to state 58
    Constant  go to state 59


state 42

   21 StmtBlock: LBRACE RBRACE .

    $default  reduce using rule 21 (StmtBlock)


state 43

   73 Constant: STRINGCONSTANT .

    $default  reduce using rule 73 (Constant)


state 44

   72 Constant: INTCONSTANT .

    $default  reduce using rule 72 (Constant)


state 45

   74 Constant: BOOLCONSTANT .

    $default  reduce using rule 74 (Constant)


state 46

   52 Expr: ID . EQUAL Expr
   54     | ID .
   69 Call: ID . LPAREN OptExprAdd RPAREN

    EQUAL   shift, and go to state 68
    LPAREN  shift, and go to state 69

    $default  reduce using rule 54 (Expr)


state 47

   23 VarDeclAdd: VariableDecl .

    $default  reduce using rule 23 (VarDeclAdd)


state 48

   33 Stmt: StmtBlock .

    $default  reduce using rule 33 (Stmt)


state 49

   18 StmtBlock: LBRACE VarDeclAdd . StmtAdd RBRACE
   20          | LBRACE VarDeclAdd . RBRACE
   22 VarDeclAdd: VarDeclAdd . VariableDecl

    BOOL            shift, and go to state 1
    CHAR            shift, and go to state 2
    CHARCONSTANT    shift, and go to state 33
    FOR             shift, and go to state 34
    IF              shift, and go to state 35
    INT             shift, and go to state 3
    PRINTF          shift, and go to state 36
    RETURN          shift, and go to state 37
    STRING          shift, and go to state 4
    WHILE           shift, and go to state 38
    MINUS           shift, and go to state 39
    SEMICOLON       shift, and go to state 40
    LPAREN          shift, and go to state 41
    LBRACE          shift, and go to state 29
    RBRACE          shift, and go to state 70
    STRINGCONSTANT  shift, and go to state 43
    INTCONSTANT     shift, and go to state 44
    BOOLCONSTANT    shift, and go to state 45
    ID              shift, and go to state 46

    VariableDecl  go to state 71
    Variable      go to state 10
    Type          go to state 21
    StmtBlock     go to state 48
    StmtAdd       go to state 72
    Stmt          go to state 51
    IfStmt        go to state 52
    WhileStmt     go to state 53
    ForStmt       go to state 54
    ReturnStmt    go to state 55
    PrintStmt     go to state 56
    Expr          go to state 57
    Call          go to state 58
    Constant      go to state 59


state 50

   19 StmtBlock: LBRACE StmtAdd . RBRACE
   24 StmtAdd: StmtAdd . Stmt

    CHARCONSTANT    shift, and go to state 33
    FOR             shift, and go to state 34
    IF              shift, and go to state 35
    PRINTF          shift, and go to state 36
    RETURN          shift, and go to state 37
    WHILE           shift, and go to state 38
    MINUS           shift, and go to state 39
    SEMICOLON       shift, and go to state 40
    LPAREN          shift, and go to state 41
    LBRACE          shift, and go to state 29
    RBRACE          shift, and go to state 73
    STRINGCONSTANT  shift, and go to state 43
    INTCONSTANT     shift, and go to state 44
    BOOLCONSTANT    shift, and go to state 45
    ID              shift, and go to state 46

    StmtBlock   go to state 48
    Stmt        go to state 74
    IfStmt      go to state 52
    WhileStmt   go to state 53
    ForStmt     go to state 54
    ReturnStmt  go to state 55
    PrintStmt   go to state 56
    Expr        go to state 57
    Call        go to state 58
    Constant    go to state 59


state 51

   25 StmtAdd: Stmt .

    $default  reduce using rule 25 (StmtAdd)


state 52

   28 Stmt: IfStmt .

    $default  reduce using rule 28 (Stmt)


state 53

   29 Stmt: WhileStmt .

    $default  reduce using rule 29 (Stmt)


state 54

   30 Stmt: ForStmt .

    $default  reduce using rule 30 (Stmt)


state 55

   31 Stmt: ReturnStmt .

    $default  reduce using rule 31 (Stmt)


state 56

   32 Stmt: PrintStmt .

    $default  reduce using rule 32 (Stmt)


state 57

   27 Stmt: Expr . SEMICOLON
   57 Expr: Expr . PLUS Expr
   58     | Expr . MINUS Expr
   59     | Expr . MULT Expr
   60     | Expr . DIV Expr
   62     | Expr . LESSTHAN Expr
   63     | Expr . LESSTHANOREQL Expr
   64     | Expr . GRTRTHAN Expr
   65     | Expr . GRTRTHANOREQL Expr
   66     | Expr . EQUIVALENT Expr
   67     | Expr . NOTEQUIVALENT Expr
   68     | Expr . MOD Expr

    PLUS           shift, and go to state 75
    MINUS          shift, and go to state 76
    MULT           shift, and go to state 77
    DIV            shift, and go to state 78
    MOD            shift, and go to state 79
    LESSTHAN       shift, and go to state 80
    LESSTHANOREQL  shift, and go to state 81
    GRTRTHAN       shift, and go to state 82
    GRTRTHANOREQL  shift, and go to state 83
    EQUIVALENT     shift, and go to state 84
    NOTEQUIVALENT  shift, and go to state 85
    SEMICOLON      shift, and go to state 86


state 58

   55 Expr: Call .

    $default  reduce using rule 55 (Expr)


state 59

   53 Expr: Constant .

    $default  reduce using rule 53 (Expr)


state 60

   37 ForStmt: FOR LPAREN . Expr SEMICOLON SEMICOLON RPAREN Stmt
   38        | FOR LPAREN . SEMICOLON Expr SEMICOLON RPAREN Stmt
   39        | FOR LPAREN . SEMICOLON SEMICOLON Expr RPAREN Stmt
   40        | FOR LPAREN . SEMICOLON SEMICOLON RPAREN Stmt
   41        | FOR LPAREN . Expr SEMICOLON Expr SEMICOLON RPAREN Stmt
   42        | FOR LPAREN . Expr SEMICOLON SEMICOLON Expr RPAREN Stmt
   43        | FOR LPAREN . SEMICOLON Expr SEMICOLON Expr RPAREN Stmt
   44        | FOR LPAREN . Expr SEMICOLON Expr SEMICOLON Expr RPAREN Stmt

    CHARCONSTANT    shift, and go to state 33
    MINUS           shift, and go to state 39
    SEMICOLON       shift, and go to state 87
    LPAREN          shift, and go to state 41
    STRINGCONSTANT  shift, and go to state 43
    INTCONSTANT     shift, and go to state 44
    BOOLCONSTANT    shift, and go to state 45
    ID              shift, and go to state 46

    Expr      go to state 88
    Call      go to state 58
    Constant  go to state 59


state 61

   34 IfStmt: IF LPAREN . Expr RPAREN Stmt ELSE Stmt
   35       | IF LPAREN . Expr RPAREN Stmt

    CHARCONSTANT    shift, and go to state 33
    MINUS           shift, and go to state 39
    LPAREN          shift, and go to state 41
    STRINGCONSTANT  shift, and go to state 43
    INTCONSTANT     shift, and go to state 44
    BOOLCONSTANT    shift, and go to state 45
    ID              shift, and go to state 46

    Expr      go to state 89
    Call      go to state 58
    Constant  go to state 59


state 62

   47 PrintStmt: PRINTF LPAREN . STRINGCONSTANT COMMA ExprAdd RPAREN SEMICOLON
   48          | PRINTF LPAREN . Constant RPAREN SEMICOLON
   49          | PRINTF LPAREN . ID RPAREN SEMICOLON

    CHARCONSTANT    shift, and go to state 33
    STRINGCONSTANT  shift, and go to state 90
    INTCONSTANT     shift, and go to state 44
    BOOLCONSTANT    shift, and go to state 45
    ID              shift, and go to state 91

    Constant  go to state 92


state 63

   45 ReturnStmt: RETURN SEMICOLON .

    $default  reduce using rule 45 (ReturnStmt)


state 64

   46 ReturnStmt: RETURN Expr . SEMICOLON
   57 Expr: Expr . PLUS Expr
   58     | Expr . MINUS Expr
   59     | Expr . MULT Expr
   60     | Expr . DIV Expr
   62     | Expr . LESSTHAN Expr
   63     | Expr . LESSTHANOREQL Expr
   64     | Expr . GRTRTHAN Expr
   65     | Expr . GRTRTHANOREQL Expr
   66     | Expr . EQUIVALENT Expr
   67     | Expr . NOTEQUIVALENT Expr
   68     | Expr . MOD Expr

    PLUS           shift, and go to state 75
    MINUS          shift, and go to state 76
    MULT           shift, and go to state 77
    DIV            shift, and go to state 78
    MOD            shift, and go to state 79
    LESSTHAN       shift, and go to state 80
    LESSTHANOREQL  shift, and go to state 81
    GRTRTHAN       shift, and go to state 82
    GRTRTHANOREQL  shift, and go to state 83
    EQUIVALENT     shift, and go to state 84
    NOTEQUIVALENT  shift, and go to state 85
    SEMICOLON      shift, and go to state 93


state 65

   36 WhileStmt: WHILE LPAREN . Expr RPAREN Stmt

    CHARCONSTANT    shift, and go to state 33
    MINUS           shift, and go to state 39
    LPAREN          shift, and go to state 41
    STRINGCONSTANT  shift, and go to state 43
    INTCONSTANT     shift, and go to state 44
    BOOLCONSTANT    shift, and go to state 45
    ID              shift, and go to state 46

    Expr      go to state 94
    Call      go to state 58
    Constant  go to state 59


state 66

   57 Expr: Expr . PLUS Expr
   58     | Expr . MINUS Expr
   59     | Expr . MULT Expr
   60     | Expr . DIV Expr
   61     | MINUS Expr .
   62     | Expr . LESSTHAN Expr
   63     | Expr . LESSTHANOREQL Expr
   64     | Expr . GRTRTHAN Expr
   65     | Expr . GRTRTHANOREQL Expr
   66     | Expr . EQUIVALENT Expr
   67     | Expr . NOTEQUIVALENT Expr
   68     | Expr . MOD Expr

    MULT           shift, and go to state 77
    DIV            shift, and go to state 78
    MOD            shift, and go to state 79
    LESSTHAN       shift, and go to state 80
    LESSTHANOREQL  shift, and go to state 81
    GRTRTHAN       shift, and go to state 82
    GRTRTHANOREQL  shift, and go to state 83
    EQUIVALENT     shift, and go to state 84
    NOTEQUIVALENT  shift, and go to state 85

    $default  reduce using rule 61 (Expr)


state 67

   56 Expr: LPAREN Expr . RPAREN
   57     | Expr . PLUS Expr
   58     | Expr . MINUS Expr
   59     | Expr . MULT Expr
   60     | Expr . DIV Expr
   62     | Expr . LESSTHAN Expr
   63     | Expr . LESSTHANOREQL Expr
   64     | Expr . GRTRTHAN Expr
   65     | Expr . GRTRTHANOREQL Expr
   66     | Expr . EQUIVALENT Expr
   67     | Expr . NOTEQUIVALENT Expr
   68     | Expr . MOD Expr
